--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,12 @@ ol, ul {
 .game-info {
   margin-left: 20px;
 }
+
+.projects {
+  display: inline-block;
+  padding: 10px;
+}
+
+.text-center {
+  text-align: center;
+}
